--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,30 @@
 .header {
-    height: 76px;
-    width: 100%;
-    background-color: green;
+  font-family: 'Josefin Sans', sans-serif;
 }
+
+.MuiOutlinedInput-notchedOutline {
+   border: none !important;   
+}
+
+.text-header {
+  font-size: 14px;
+  color: #000;
+  margin-left: 5px;
+}
+
+.css-to4x1n-MuiBadge-badge {
+  background: #f51167 !important;
+  /* font-size: 13px !important;
+  color: white !important;
+  width: 16px !important;
+  height: 16px !important;
+  min-width: 16px !important; */
+}
+
+.css-u68qk3-MuiToolbar-root {
+  padding: 8px 0px!important;
+}
+
+/* .navigation-text {
+ 
+} */
