--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -79,9 +79,7 @@
   margin-left: 5px;
 }
 
-.footer-Copyright {
+.footer-copyright {
   color: #fff;
   text-align: center;
-  margin-top: 48px;
-  height: 60px;
 }
