--- a/src/Body/Body.scss
+++ b/src/Body/Body.scss
@@ -35,22 +35,6 @@
   to {top: 0px;}
 }
 
-.button {
-  display: inline-block;
-  border: none;
-  font-size: 14px;
-  font-weight: 600;
-  min-width: 167px;
-  padding: 18px 5px;
-  border-radius: 10px;
-  text-transform: uppercase;
-  background: #f51167;
-  color: #fff;
-  line-height: normal;
-  cursor: pointer;
-  text-align: center;
-}
-
 .slideshow-button-text {
   background: transparent;
   color: #fff;
@@ -67,7 +51,6 @@
   color: #fff;
   background: none;
   padding: 0;
-  // opacity: 0;
 }
 
 .each-slide p {
@@ -83,27 +66,63 @@
     width: 100%;
     height: 100%;
   }
-
-  .carousel-icon {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    bottom: 32px;
-    right: 10px;
-  }
   
   .carousel-card {
     position: relative;
   }
   
-  .carousel-label {
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.5rem;  
-  }
-  
   &-product-cost {
     float: right;
+  }
+}
+
+.carousel-label {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;  
+}
+
+.carousel-icon {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 38px;
+  right: 10px;
+
+  button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 0;
+
+    &:hover {
+      background: #f0f0f0;
+    }
+  }
+  
+  .icon {
+    margin: 0;
+    text-align: right;
+    cursor: pointer;
+  }
+
+  &-bg {
+    border: 1px solid;
+  }
+
+  .add-text {
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+      top: 10px;
+      -webkit-transition: all 0.4s ease 0.3s;
+      -o-transition: all 0.4s ease 0.3s;
+      transition: all 0.4s ease 0.3s;
+    }
   }
 }
 
