--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -24,6 +24,10 @@
   width: 100% !important;
 }
 
+.css-okiw7o-MuiInputBase-root {
+  width: 100% !important;
+}
+
 .nav-link {
   &:hover {
     color: #f51167;
