--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -20,6 +20,10 @@
   padding: 8px 0px!important;
 }
 
+.css-u68qk3-MuiToolbar-root {
+  padding: 8px 0px!important;
+}
+
 .nav-link {
   &:hover {
     color: #f51167;
